API Implementation of Multiple Request with AWS service integration to handle each request and process it using Amazon Kinesis for processing streaming data.